# qwixxer

./: .gitignore  Cargo.toml  README.md  champion-0.txt  champion-1.txt  champion-3.txt  champion-5.txt  champion.txt  champion_finetuned.txt  plot_training.py  todo.txt
.github/workflows/: deploy.yml  test.yml
docs/: ARCHITECTURE.md  EXPERIMENTS.md
docs/superpowers/plans/: 2026-04-11-web-ui.md  2026-04-23-two-phase-refactor.md
dqn_model/: model.mpk  target_model.mpk  tmp_thread_model.mpk  training_log.csv  training_scores.csv
dqn_model/checkpoint/: model-49.mpk  model-50.mpk  optim-49.mpk  optim-50.mpk  scheduler-49.mpk
examples/: score_distribution.rs  sigma_probe.rs  sigma_validation.rs
policy_model/: model.mpk  tmp_thread_model.mpk
scripts/: bradley_terry.py  davidson.py  sigma_validation_plots.py
src/: blank.rs  bot.rs  dqn.rs  game.rs  lib.rs  main.rs  mcts.rs  policy.rs  race_to_lock.rs  state.rs
src/dqn/: mod.rs  train.rs
src/strategy/: bot_impl.rs  mod.rs
web/: Cargo.toml  README.md  build.sh  explorer.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: manifest.json  sw.js
web/src/: lib.rs
web/src/ts/: board.ts  dice.ts  explorer.ts  main.ts  moves.ts  style.css  types.ts
