[package]
name = "qwixxer"
version = "0.1.0"
edition = "2021"

[lib]
name = "qwixxer"
path = "src/lib.rs"

[[bin]]
name = "qwixxer"
path = "src/main.rs"

[features]
default = ["dqn", "parallel"]
dqn = ["burn", "burn/train", "serde", "parallel"]
burn = ["dep:burn"]
parallel = ["rayon"]

[dependencies]
anyhow = "1"
burn = { version = "0.20.1", features = ["ndarray"], optional = true }
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.8"
itertools = "0.12"
rand = { version = "0.8", features = ["small_rng"] }
rayon = { version = "1", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[profile.release]
lto = true
